--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "pdfjs-dist": "^2.6.347",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
+    "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-paginator": "^2.1.2",
+    "react-csv": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
